objects/Expertise__c.object
<CustomObject>
    <fields>
        <fullName>Details__c</fullName>
        <label>Details</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <label>Order</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tag__c</fullName>
        <label>Tag</label>
        <type>TextArea</type>
    </fields>
    <label>Expertise</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Details__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Expertise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Expertises</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>